UI changes in dashboard/search/upload

--- a/listing/templates/dashboard.html
+++ b/listing/templates/dashboard.html
@@ -21,7 +21,7 @@
               <h5>US $5 - 50</h5>
               <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> Hong Kong</span>
               <p>Widget Description</p>
-              </span>
+              <div><a href="#">#Automobile&Components</a> <a href="#">#Retailing</a></div>
             </div>
             </div>
             <span class="card-footer text-dark clearfix small z-1" href="#">
@@ -44,7 +44,7 @@
               <h5>US $5 - 50</h5>
               <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> Hong Kong</span>
               <p>Widget Description</p>
-              </span>
+             <div><a href="#">#Automobile&Components</a> <a href="#">#Retailing</a></div>
             </div>
             </div>
             <span class="card-footer text-dark clearfix small z-1" href="#">
@@ -67,7 +67,7 @@
               <h5>US $5 - 50</h5>
               <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> Hong Kong</span>
               <p>Widget Description</p>
-              </span>
+              <div><a href="#">#Automobile&Components</a> <a href="#">#Retailing</a></div>
             </div>
             </div>
             <span class="card-footer text-dark clearfix small z-1" href="#">
@@ -100,7 +100,7 @@
               <h5>US $5 - 50</h5>
               <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> Hong Kong</span>
               <p>Widget Description</p>
-              </span>
+              <div><a href="#">#Automobile&Components</a> <a href="#">#Retailing</a></div>
             </div>
             </div>
             <span class="card-footer text-dark clearfix small z-1" href="#">
@@ -123,7 +123,7 @@
               <h5>US $5 - 50</h5>
               <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> Hong Kong</span>
               <p>Widget Description</p>
-              </span>
+              <div><a href="#">#Automobile&Components</a> <a href="#">#Retailing</a></div>
             </div>
             </div>
             <span class="card-footer text-dark clearfix small z-1" href="#">
@@ -146,7 +146,7 @@
               <h5>US $5 - 50</h5>
               <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> Hong Kong</span>
               <p>Widget Description</p>
-              </span>
+              <div><a href="#">#Automobile&Components</a> <a href="#">#Retailing</a></div>
             </div>
             </div>
             <span class="card-footer text-dark clearfix small z-1" href="#">
