--- a/listing/templates/dashboard.html
+++ b/listing/templates/dashboard.html
@@ -9,29 +9,7 @@
           <b><i class="fa fa-th-large" aria-hidden="true"></i> Latest Widgets</b></div>
         <div class="card-body">
         	<div class="row">
-        <div class="col-xl-3 col-sm-6 mb-3">
-          <div class="card text-dark bg-white o-hidden h-100">
-            <div class="card-body">
-              <div class="card-body-icon">
-  
-              </div>
-              <div class="mr-5">
-
-              <h2>Widget Title</h2>
-              <h5>US $5 - 50</h5>
-              <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> Hong Kong</span>
-              <p>Widget Description</p>
-              <div><a href="#">#Automobile&Components</a> <a href="#">#Retailing</a></div>
-            </div>
-            </div>
-            <span class="card-footer text-dark clearfix small z-1" href="#">
-              <span class="float-left"><i class="fa fa-crosshairs text-danger" aria-hidden="true"></i> Asia, Oceania</span>
-              <span class="float-right">
-                <a href="#" class="text-dark"><i class="fa fa-plus" aria-hidden="true"></i></a>
-              </span>
-            </span >
-          </div>
-        </div>
+        {% for i in result %}
         <div class="col-xl-3 col-sm-6 mb-3">
           <div class="card text-dark bg-white o-hidden h-100">
             <div class="card-body">
@@ -40,32 +18,9 @@
               </div>
               <div class="mr-5">
 
-              <h2>Widget Title</h2>
-              <h5>US $5 - 50</h5>
-              <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> Hong Kong</span>
-              <p>Widget Description</p>
-             <div><a href="#">#Automobile&Components</a> <a href="#">#Retailing</a></div>
-            </div>
-            </div>
-            <span class="card-footer text-dark clearfix small z-1" href="#">
-              <span class="float-left"><i class="fa fa-crosshairs text-danger" aria-hidden="true"></i> Asia, Oceania</span>
-              <span class="float-right">
-                <a href="#" class="text-dark"><i class="fa fa-plus" aria-hidden="true"></i></a>
-              </span>
-            </span >
-          </div>
-        </div>
-         <div class="col-xl-3 col-sm-6 mb-3">
-          <div class="card text-dark bg-white o-hidden h-100">
-            <div class="card-body">
-              <div class="card-body-icon">
-
-              </div>
-              <div class="mr-5">
-
-              <h2>Widget Title</h2>
-              <h5>US $5 - 50</h5>
-              <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> Hong Kong</span>
+              <h2>{{ i.widget1 }}</h2>
+              <h5>{{ i.widget2 }}</h5>
+              <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> {{ i.widget3 }}</span>
               <p>Widget Description</p>
               <div><a href="#">#Automobile&Components</a> <a href="#">#Retailing</a></div>
             </div>
@@ -73,11 +28,12 @@
             <span class="card-footer text-dark clearfix small z-1" href="#">
               <span class="float-left"><i class="fa fa-crosshairs text-danger" aria-hidden="true"></i> Asia, Oceania</span>
               <span class="float-right">
-                <a href="#" class="text-dark"><i class="fa fa-plus" aria-hidden="true"></i></a>
+                <a href="{% url 'detail-view' i.id %}" class="text-dark"><i class="fa fa-plus" aria-hidden="true"></i></a>
               </span>
             </span >
           </div>
         </div>
+        {% endfor %}
       	</div>
       </div>
   </div>
