--- a/listing/templates/search_page.html
+++ b/listing/templates/search_page.html
@@ -32,6 +32,7 @@
     <span class="card-footer text-dark clearfix small z-1" href="#">
       <span class="float-left"><i class="fa fa-crosshairs text-danger" aria-hidden="true"></i> Asia, Oceania</span>
       <span class="float-right">
+      <a href="{% url 'detail-view' i.id %}" class="text-dark"><i class="fa fa-plus" aria-hidden="true"></i></a>
       </span>
     </span >
     </div>
