--- a/listing/static/listing/css/sb-admin.css
+++ b/listing/static/listing/css/sb-admin.css
@@ -29,7 +29,40 @@ span.nav-item
   min-height: calc(100vh - 56px);
   padding-top: 1rem;
 }
-
+.mr-5 p
+{
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+.mr-5 div a
+{
+  font-size: 11px;
+  color: #000;
+}
+.wid-details 
+{
+  font-size: 13px;
+}
+.wid-details h4
+{
+  font-size: 13px;
+  font-weight: normal;
+}
+.wid-details h4 b
+{
+  display: inline-block;
+  margin-right: 10px;
+}
+.wid-details .col-xl-2
+{
+  margin-bottom: 10px;
+}
+.wid-details label
+{
+  font-size: 12px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
 .scroll-to-top {
   position: fixed;
   right: 15px;
@@ -411,9 +444,16 @@ body.sidenav-toggled .navbar-sidenav-tooltip.show {
 }
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover
 {
-  color: #101010!important;
+  color: #101010;
 }
-
+.ml-auto a:hover
+{
+   color: #101010!important; 
+}
+.navbar-sidenav a:hover
+{
+  color: #f2f2f2!important;
+}
 #mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item > .nav-link:hover {
   color: #adb5bd;
 }
