--- a/listing/templates/search_page.html
+++ b/listing/templates/search_page.html
@@ -14,30 +14,7 @@
 
 <div class="row">
 
-    {% for i in result %}
-    <div class="col-xl-3 col-sm-6 mb-3">
-    <div class="card text-dark bg-white o-hidden h-100">
-    <div class="card-body">
-      <div class="card-body-icon">
-
-      </div>
-      <div class="mr-5">
-      <h2>{{ i.widget1 }}</h2>
-      <h5>US $5 - 50</h5>
-      <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> Hong Kong</span>
-      <p>Widget Description</p>
-      <div><a href="#">#Automobile&Components</a> <a href="#">#Retailing</a></div>
-    </div>
-    </div>
-    <span class="card-footer text-dark clearfix small z-1" href="#">
-      <span class="float-left"><i class="fa fa-crosshairs text-danger" aria-hidden="true"></i> Asia, Oceania</span>
-      <span class="float-right">
-      <a href="{% url 'detail-view' i.id %}" class="text-dark"><i class="fa fa-plus" aria-hidden="true"></i></a>
-      </span>
-    </span >
-    </div>
-    </div>
-    {% endfor %}
+    {% include "widget.html" %}
 
 </div>
 </div>
