--- a/templates/base.html
+++ b/templates/base.html
@@ -20,20 +20,20 @@
 <body class="fixed-nav sticky-footer" id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="index.html">Black</a>
+    <a class="navbar-brand" href="/">Black</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-          <span class="nav-item">
+          <a class="nav-link" href="/">
             <i class="fa fa-fw fa-dashboard"></i>
             <span class="nav-link-text">Dashboard</span>
-          </span>
+          </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="New">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/upload/">
             <i class="fa fa-fw fa-puzzle-piece"></i>
             <span class="nav-link-text">New</span>
           </a>
@@ -96,7 +96,7 @@
 <footer class="sticky-footer">
       <div class="container">
         <div class="text-center">
-          <small>Copyright © Your Website 2018</small>
+          <small>Copyright © Black 2018</small>
         </div>
       </div>
     </footer>
