--- a/listing/templates/search_page.html
+++ b/listing/templates/search_page.html
@@ -13,9 +13,9 @@
         </form>
 
 <div class="row">
-
+    {% for i in result %}
     {% include "widget.html" %}
-
+    {% endfor %}
 </div>
 </div>
 </div>
