--- a/listing/templates/widget_detail.html
+++ b/listing/templates/widget_detail.html
@@ -10,10 +10,10 @@
         						<b>US$ {{ result.widget2 }}</b>
         					</div>
         					<div class="col-xl-2">
-        						<i class="fa fa-map-marker text-warning" aria-hidden="true"></i> {{ result.widget3 }}
+        						<i class="fa fa-map-marker text-warning" aria-hidden="true"></i> {{ result.widget8.widget_choice }}
         					</div>
         					<div class="col-xl-3">
-        						<i class="fa fa-crosshairs text-danger" aria-hidden="true"></i> {{ result.widget4 }}
+        						<i class="fa fa-crosshairs text-danger" aria-hidden="true"></i> {{ result.widget8.widget_choice }}
         					</div>
         		<div class="col-xl-12 col-sm-6 mb-3">		
 				<label>Description 1 </label>
@@ -27,11 +27,11 @@
 			<div class="row">
 				<div class="col-xl-3">
 					<label>Description 3</label>
-					<p>    {{ result.widget8 }}</p>
+					<p>    {{ result.widget5 }}</p>
 				</div>
 				<div class="col-xl-3">
 				<label>Description 4 </label>   
-				<p>{{ result.widget9 }}</p>
+				<p>{{ result.widget11 }}</p>
 				</div>
 				<div class="col-xl-3">
 				<label>Description 5 </label>
@@ -50,8 +50,8 @@
 		        <div class="card-body">
 				<h4><b>Description 1</b>    {{ result.widget5 }}</h4>
 				<h4><b>Description 2 </b>   {{ result.widget6 }}</h4>
-				<h4><b>Description 3  </b>  {{ result.widget8 }}</h4>
-				<h4><b>Description 4 </b>   {{ result.widget9 }}</h4>
+				<h4><b>Description 3  </b>  {{ result.widget5 }}</h4>
+				<h4><b>Description 4 </b>   {{ result.widget11.widget_choice }}</h4>
 			</div>
 		</div>
         		</div>
