--- a/listing/static/listing/css/sb-admin.css
+++ b/listing/static/listing/css/sb-admin.css
@@ -146,7 +146,7 @@ span.nav-item
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     font-size: 13px;
 }
-.listing input[type="submit"]
+.listing input[type="submit"], .listing button
  {
     display: inline-block;
     font-weight: 400;
@@ -167,7 +167,16 @@ span.nav-item
     border-color: #6c757d;
     font-size: 13px;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    margin-top: 15px;
+    /*margin-top: 15px;*/
+    cursor: pointer;
+}
+.listing input[type="submit"]:hover
+{
+  background-color: #3b4146;
+}
+.listing button:hover
+{
+  background-color: #3b4146;
 }
 #mainNav .navbar-collapse {
   overflow: auto;
@@ -444,7 +453,7 @@ body.sidenav-toggled .navbar-sidenav-tooltip.show {
 }
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover
 {
-  color: #101010;
+    color: #656565 !important;
 }
 .ml-auto a:hover
 {
@@ -455,7 +464,7 @@ body.sidenav-toggled .navbar-sidenav-tooltip.show {
   color: #f2f2f2!important;
 }
 #mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item > .nav-link:hover {
-  color: #adb5bd;
+      color: #b3b3b3 !important;
 }
 
 #mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item .sidenav-second-level > li > a,
