--- a/listing/templates/widget.html
+++ b/listing/templates/widget.html
@@ -8,13 +8,13 @@
 
       <h2>{{ i.widget1 }}</h2>
       <h5>{{ i.widget2 }}</h5>
-      <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> {% for m in i.widget8.all|join:", " %} {{ m }} {% endfor %}</span>
+      <span><i class="fa fa-map-marker text-warning" aria-hidden="true"></i> {% for m in i.widget8.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</span>
       <p>{{ i.widget3 }}</p>
       <div><a href="#">{{ i.widget4 }}</a> <a href="#">{{ i.widget5 }}</a></div>
     </div>
     </div>
     <span class="card-footer text-dark clearfix small z-1" href="#">
-      <span class="float-left"><i class="fa fa-crosshairs text-danger" aria-hidden="true"></i>{% for m in i.widget8.all|join:", " %} {{ m }} {% endfor %}</span>
+      <span class="float-left"><i class="fa fa-crosshairs text-danger" aria-hidden="true"></i>{% for m in i.widget8.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</span>
       <span class="float-right">
         <a href="{% url 'detail-view' i.id %}" class="text-dark"><i class="fa fa-plus" aria-hidden="true"></i></a>
       </span>
