--- a/listing/templates/upload.html
+++ b/listing/templates/upload.html
@@ -8,7 +8,7 @@
 		        <div class="col-xl-4 col-sm-6 mb-3">
 		          <div class="text-dark bg-white o-hidden h-100">
 			            <div class="card-body">
-							<form action="" method="post" class="listing">
+							<form action="" method="post" class="listing" enctype="multipart/form-data">
 							    {% csrf_token %}
 							    {{ form.as_p }}
 							<input type="submit" value="Upload">
