--- a/templates/base.html
+++ b/templates/base.html
@@ -15,13 +15,14 @@
   <!-- Page level plugin CSS-->
   <link href="{% static '/listing/vendor/datatables/dataTables.bootstrap4.css' %}" rel="stylesheet">
   <!-- Custom styles for this template-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
   <link href="{% static '/listing/css/sb-admin.css' %}" rel="stylesheet">
   <script src="{% static '/listing/vendor/jquery/jquery.min.js' %}"></script>
 </head>
 <body class="fixed-nav sticky-footer" id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="/">Black</a>
+    <a class="navbar-brand" href="/"><img src="{% static '/listing/images/logo.png' %}"></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
     </button>
@@ -29,38 +30,37 @@
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
           <a class="nav-link" href="/">
-            <i class="fa fa-fw fa-dashboard"></i>
             <span class="nav-link-text">Dashboard</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="New">
           <a class="nav-link" href="/upload/">
-            <i class="fa fa-fw fa-puzzle-piece"></i>
-            <span class="nav-link-text">New</span>
+            <i class="fa fa-fw"><img src="{% static '/listing/images/opprtunity.png' %}""></i>
+            <span class="nav-link-text">Opportunities</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Matches">
           <a class="nav-link" href="#">
-            <i class="fa fa-fw fa-exchange"></i>
-            <span class="nav-link-text">Matches</span>
+            <i class="fa fa-fw"><img src="{% static '/listing/images/fund-seeking.png' %}""></i>
+            <span class="nav-link-text">Fund Seeking</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
           <a class="nav-link" href="#">
-            <i class="fa fa-fw fa-shopping-cart"></i>
-            <span class="nav-link-text">Buying</span>
+            <i class="fa fa-fw"><img src="{% static '/listing/images/download.png' %}""></i>
+            <span class="nav-link-text">Upload</span>
           </a>
         </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
           <a class="nav-link" href="#">
-            <i class="fa fa-fw fa-tags"></i>
-            <span class="nav-link-text">Selling</span>
+            <i class="fa fa-fw"><img src="{% static '/listing/images/search.png' %}""></i>
+            <span class="nav-link-text">Search</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
           <a class="nav-link" href="#">
-            <i class="fa fa-fw fa-info"></i>
-            <span class="nav-link-text">Help</span>
+            <i class="fa fa-fw"><img src="{% static '/listing/images/user.png' %}""></i>
+            <span class="nav-link-text">User Name</span>
           </a>
         </li>
       </ul>
@@ -71,20 +71,7 @@
           </a>
         </li>
       </ul>
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/upload/">
-            <i class="fa fa-fw fa-upload"></i>Upload</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/search/">
-            <i class="fa fa-fw fa-search"></i>Search</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">
-            <i class="fa fa-fw fa-user"></i>John Smith</a>
-        </li>
-      </ul>
+
     </div>
   </nav>
   <div class="content-wrapper">
@@ -126,6 +113,18 @@
     <!-- Bootstrap core JavaScript-->
     
     <script src="{% static '/listing/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <!-- Core plugin JavaScript-->
+    <script src="{% static '/listing/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+    <!-- Page level plugin JavaScript-->
+    <script src="{% static '/listing/vendor/chart.js/Chart.min.js' %}"></script>
+    <!-- Custom scripts for all pages-->
+    <script src="{% static '/listing/js/sb-admin.min.js' %}"></script>
+    <!-- Custom scripts for this page-->
+  </div>
+</body>
+
+</html>
+t>
     <!-- Core plugin JavaScript-->
     <script src="{% static '/listing/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
     <!-- Page level plugin JavaScript-->
