--- a/listing/templates/upload.html
+++ b/listing/templates/upload.html
@@ -19,5 +19,24 @@
 			</div>
 		</div>
 	</div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script>
+    $("#id_geography").change(function () {
+      var url = $("#OpportunityForm").attr("upload");  // get the url of the `load_cities` view
+      var geographyId = $(this).val();  // get the selected country ID from the HTML input
+	  alert(geographyId)
+      $.ajax({                       // initialize an AJAX request
+        url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
+        data: {
+          'geography': geographyId       // add the country id to the GET parameters
+        },
+        success: function (data) {   // `data` is the return of the `load_cities` view function
+          $("#id_country").html(data);  // replace the contents of the city input with the data that came from the server
+        }
+      });
+
+    });
+  </script>
 {% endblock %}
 
