--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="New">
-          <a class="nav-link" href="/upload/">
+          <a class="nav-link" href="/opportunity-upload/">
             <i class="fa fa-fw"><img src="{% static '/listing/images/opprtunity.png' %}""></i>
             <span class="nav-link-text">Opportunities</span>
           </a>
