--- a/listing/templates/widget.html
+++ b/listing/templates/widget.html
@@ -21,7 +21,7 @@
     <span class="card-footer text-dark clearfix small z-1" href="#">
       <span class="float-left"><i class="fa fa-crosshairs text-danger" aria-hidden="true"></i>{% for m in i.widget8.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</span>
       <span class="float-right">
-        <a href="{% url 'detail-view' i.id %}" class="text-dark"><i class="fa fa-plus" aria-hidden="true"></i></a>
+        <a href="{% url 'opportunity-detail-view' i.id %}" class="text-dark"><i class="fa fa-plus" aria-hidden="true"></i></a>
       </span>
     </span >
   </div>
