UI changes Dashoard, Widget, Base Financial table

--- a/listing/static/listing/css/sb-admin.css
+++ b/listing/static/listing/css/sb-admin.css
@@ -15,7 +15,10 @@ body.sticky-footer {
 body.sticky-footer .content-wrapper {
   min-height: calc(100vh - 56px - 56px);
 }
-
+#financial-table input
+{
+width:70px;
+}
 body.fixed-nav {
   padding-top: 56px;
 }
@@ -80,6 +83,10 @@ span.nav-item
   background: rgba(52, 58, 64, 0.5);
   line-height: 45px;
 }
+.content
+{
+  padding-left: 25px;
+}
 .fixed-top
 {
   width: 250px;
@@ -117,8 +124,140 @@ span.nav-item
 
 .o-hidden {
   overflow: hidden !important;
+  border-radius: 0px!important;
 }
-
+.heading-h1
+{
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.grid
+{
+  display: table;
+  margin-bottom: 20px;
+}
+.grid img
+{
+  display: inline-flex;
+  margin-right: 15px;
+}
+.grid p
+{
+  display: inline-flex;
+}
+.refines button
+{
+  float: left;
+  border: 1px solid rgba(0,0,0,.125);
+  background-color: #fff;
+  color: #000;
+  font-size: 13px;
+  float: left;
+  margin-right: 10px; 
+}
+.refines
+{
+  margin-bottom: 20px;
+}
+.wid-bg
+{
+  float: left;
+  width: 100%;
+  height: 145px;
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: 100% auto;
+  position: relative;
+}
+.wid-logo
+{
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  right: 10px;
+  border: 1px solid rgba(0,0,0,.125);
+  bottom: -40px;
+  overflow: hidden;
+}
+.wid-logo img
+{
+  width: 100%;
+}
+.wid-cards
+{
+  float: left;
+  width: 100%;
+}
+.wid-details
+{
+  display: inline-block;
+  padding: 12px;
+}
+.wid-details h2
+{
+  float: left;
+  width: 100%;
+  line-height: 18px;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.wid-details h5
+{
+  float: left;
+  width: 100%;
+  line-height: 14px;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.wid-details span
+{
+  font-size: 16px;
+  float: left;
+  width: 100%;
+  line-height: 16px;
+  margin-bottom: 10px;
+}
+.wid-details p
+{
+  font-size: 16px;
+  float: left;
+  width: 100%;
+  line-height: 16px;
+  margin-bottom: 10px;
+  max-height: 45px;
+  overflow: hidden;
+}
+.wid-details a
+{
+  background-color: #c6c6c6;
+  font-size: 12px;
+  color: #fff;
+  border-radius: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-right: 5px;
+  padding-left: 5px;
+  float: left;
+}
+.wid-specs
+{
+  float: left;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.wid-specs label
+{
+  float: left;
+  width: 100%;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: normal;
+}
 .z-0 {
   z-index: 0;
 }
@@ -142,7 +281,7 @@ span.nav-item
   font-size: 13px;
   font-weight: bold;
 }
-.listing input[type="text"], .listing select
+.listing input[type="text"], .listing select, .listing input[type="number"], .listing textarea
 {
     display: block;
     width: 100%;
@@ -156,6 +295,15 @@ span.nav-item
     border-radius: .25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     font-size: 13px;
+}
+.listing table
+{
+   border: 1px solid #ced4da;
+}
+.listing table th, .listing table td
+{
+   border: 1px solid #ced4da;
+   font-size:12px;
 }
 .listing input[type="submit"], .listing button
  {
