--- a/templates/base.html
+++ b/templates/base.html
@@ -76,9 +76,11 @@
   </nav>
   <div class="content-wrapper">
     <div class="container-fluid">
+      <div class="content">
 {% block content %}
 
 {% endblock %}
+</div>
 </div>
 </div>
 <footer class="sticky-footer">
